--- a/.github/workflows/migrate-packages.yml
+++ b/.github/workflows/migrate-packages.yml
@@ -39,8 +39,8 @@ jobs:
           - name: Filter package list
             id: filter-packages
             run: |
-              SELECTED_TASKS=${{ steps.extract-params.outputs.selected-tasks }}
-              PACKAGE_LIST=${{ steps.extract-params.outputs.package-list }}
+              SELECTED_TASKS=$(echo '${{ steps.extract-params.outputs.selected-tasks }}' | jq '.')
+              PACKAGE_LIST=$(echo '${{ steps.extract-params.outputs.package-list }}' | jq '.')
               FILTERED_PACKAGES=$(echo "$PACKAGE_LIST" | jq --argjson tasks "$SELECTED_TASKS" '[.[] | select(.name as $name | $tasks | index($name))]')
               echo "filtered-packages=$FILTERED_PACKAGES" >> "$GITHUB_OUTPUT"
               echo "filtered-packages=$FILTERED_PACKAGES" >> "$GITHUB_STEP_SUMMARY"
