--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -65,7 +65,7 @@ jobs:
           echo "" >> task-list.md
           echo "<!-- Do not remove the below comment. -->"
           echo '<!-- package-list=${{ toJSON(steps.org-packages.outputs.packages) }} -->' >> task-list.md
-          echo "<!-- cache-key='${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json' -->" >> task-list.md
+          echo '<!-- cache-key="${{ github.workflow }}-${{ github.run_id }}-${{ github.run_attempt }}-json" -->' >> task-list.md
           gh issue edit ${{ github.event.issue.number }} --body-file task-list.md
         shell: bash
         env:
