--- a/.github/workflows/migrate-packages.yml
+++ b/.github/workflows/migrate-packages.yml
@@ -49,21 +49,18 @@ jobs:
       needs: migrate-packages
       runs-on: ubuntu-latest
 
+      permissions:
+        actions: read
+
       strategy:
         max-parallel: 1
         matrix:
           pkg: ${{fromJson(needs.migrate-packages.outputs.package-list)}}
 
       outputs:
-        job-id: 
+        job-id: ${{ github.job}}
 
       steps:
-        - name: Set job id
-          id: set-job-id
-          run: |
-            echo "job-id=${{ github.job }}" >> "$GITHUB_OUTPUT"
-            echo "job-id=${{ github.job }}" >> "$GITHUB_STEP_SUMMARY"
-
         - name: Check out code
           uses: actions/checkout@v4
 
@@ -90,6 +87,25 @@ jobs:
             from-org-pat: ${{ secrets.FROM_ORG_PAT }}
             to-org: ${{ needs.migrate-packages.outputs.to-org }}
             to-org-pat: ${{ secrets.TO_ORG_PAT }}
+        
+        - name: Get job logs
+          run: |
+            RUN_ID=${{ github.run_id }}
+            OWNER=${{ github.repository_owner }}
+            REPO=${{ github.repository }}
+            JOB_NAME="migrate-packages"
+            
+            # List all jobs for this workflow run
+            JOBS_JSON=$(gh api repos/$OWNER/$REPO/actions/runs/$RUN_ID/jobs)
+            
+            # Find the job ID for the job with the name "migrate-packages"
+            JOB_ID=$(echo $JOBS_JSON | jq -r '.jobs[] | select(.name=="'$JOB_NAME'") | .id')
+            
+            # Get the logs for this job
+            gh api repos/$OWNER/$REPO/actions/jobs/$JOB_ID/logs
+          shell: bash
+          env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     report-status:
       if: always()
