--- a/.github/workflows/migrate-packages.yml
+++ b/.github/workflows/migrate-packages.yml
@@ -108,7 +108,7 @@ jobs:
             # echo "Jobs JSON: $JOBS_JSON" >> $GITHUB_STEP_SUMMARY
             
             # Find the job ID for the job with the name that starts with "upload-assets" and create a json array of the job IDs
-            JOB_ID=$(echo $JOBS_JSON | jq '.jobs[] | select(.name | startswith("upload-assets")) | {id: .id, name: .name, workflow_name: .workflow_name, status: .status, conclusion: .conclusion, started_at: .started_at, completed_at: .completed_at}')
+            JOB_ID=$(echo $JOBS_JSON | jq '[.jobs[] | select(.name | startswith("upload-assets")) | {id: .id, name: .name, workflow_name: .workflow_name, status: .status, conclusion: .conclusion, started_at: .started_at, completed_at: .completed_at}]')
 
             echo "Job IDs: $JOB_ID" >> $GITHUB_STEP_SUMMARY
             
@@ -126,7 +126,7 @@ jobs:
               JOB_COMPLETED_AT=$(_jq '.completed_at')
               
               # Use the gh cli to post a comment to the issue with the logs
-              gh issues comment ${{ github.event.issue.number }} -b "<details><summary>$JOB_NAME ($JOB_CONCLUSION): $JOB_STARTED_AT - $JOB_COMPLETED_AT</summary>$JOB_LOGS</details>"
+              gh issues comment ${{ github.event.issue.number }} -b "<details><summary>$JOB_NAME ($JOB_STATUS/$JOB_CONCLUSION): $JOB_STARTED_AT - $JOB_COMPLETED_AT</summary>$JOB_LOGS</details>"
             done
           shell: bash
           env:
