--- a/.github/workflows/migrate-packages.yml
+++ b/.github/workflows/migrate-packages.yml
@@ -127,10 +127,12 @@ jobs:
               JOB_COMPLETED_AT=$(_jq '.completed_at')
 
               JOB_LOGS=$(echo "$JOB_LOGS" | awk '{print "| " $1 " | " substr($0, index($0,$2)) " |"}')
-              TABLE="\n\n| Timestamp | Log |\n| --- | --- |\n$JOB_LOGS\n\n"
+              echo "<details><summary>$JOB_NAME ($JOB_STATUS/$JOB_CONCLUSION): $JOB_STARTED_AT - $JOB_COMPLETED_AT</summary>" > table.md
+              echo "\n\n| Timestamp | Log |\n| --- | --- |\n$JOB_LOGS\n\n" >> table.md
+              echo "</details>" >> table.md
               
               # Use the gh cli to post a comment to the issue with the logs
-              gh issue comment ${{ github.event.issue.number }} -b "<details><summary>$JOB_NAME ($JOB_STATUS/$JOB_CONCLUSION): $JOB_STARTED_AT - $JOB_COMPLETED_AT</summary>$TABLE</details>"
+              gh issue comment ${{ github.event.issue.number }} -F table.md
             done
           shell: bash
           env:
