--- a/.github/workflows/migrate-packages.yml
+++ b/.github/workflows/migrate-packages.yml
@@ -128,7 +128,11 @@ jobs:
 
               JOB_LOGS=$(echo "$JOB_LOGS" | awk '{print "| " $1 " | " substr($0, index($0,$2)) " |"}')
               echo "<details><summary>$JOB_NAME ($JOB_STATUS/$JOB_CONCLUSION): $JOB_STARTED_AT - $JOB_COMPLETED_AT</summary>" > table.md
-              echo "\n\n| Timestamp | Log |\n| --- | --- |\n$JOB_LOGS\n\n" >> table.md
+              echo "" >> table.md
+              echo "| Timestamp | Log |" >> table.md
+              echo "| --- | --- |" >> table.md
+              echo "$JOB_LOGS" >> table.md
+              echo "" >> table.md
               echo "</details>" >> table.md
               
               # Use the gh cli to post a comment to the issue with the logs
